Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131785

[Boot2Qt] The media player detects 2 video tracks for the m2v file

XMLWordPrintable

    • Linux/Yocto
    • eabe65729 (dev), d9c743149 (6.9), 6c579dbaa (6.8)
    • Multimedia wk 51-2

      Linux Ubuntu 22.04.4 / Wayland

      Qt Creator 14.0.2

      Device: Raspberry Pi4 64 bit with Qt 6.8.1

      Steps to reproduce:

      1. Run QML media player
      2. Play the video in m2v format (attached)
      3. Open the popup and check the number of video tracks detected.

      Expected: A single video track should be detected.

      Actual: 2 video tracks were detected.

      Reproducibility:  100% 

      Build details:

      -----------------------
      Build Configuration:  |
      -----------------------
      DISTRO = b2qt
      DISTRO_VERSION = 5.0.4
      DISTRO_CODENAME = scarthgap
      QT_VERSION = 6.8.1
      TARGET_SYSROOT = cortexa53-poky-linux
      DEPLOY_CONF_NAME = Raspberry Pi Development Boards (64bit)
      DEPLOY_CONF_TYPE = Boot2Qt 6.8.1
      -----------------------
      Layer Revisions:      |
      -----------------------
      meta              = HEAD:2034fc38eb4e63984d9bd6b260aa1bf95ce562e4
      meta-poky         = HEAD:2034fc38eb4e63984d9bd6b260aa1bf95ce562e4
      meta-raspberrypi  = HEAD:6df7e028a2b7b2d8cab0745dc0ed2eebc3742a17
      meta-oe           = HEAD:72018ca1b1a471226917e8246e8bbf9a374ccf97
      meta-python       = HEAD:72018ca1b1a471226917e8246e8bbf9a374ccf97
      meta-networking   = HEAD:72018ca1b1a471226917e8246e8bbf9a374ccf97
      meta-initramfs    = HEAD:72018ca1b1a471226917e8246e8bbf9a374ccf97
      meta-multimedia   = HEAD:72018ca1b1a471226917e8246e8bbf9a374ccf97
      meta-filesystems  = HEAD:72018ca1b1a471226917e8246e8bbf9a374ccf97
      meta-virtualization = HEAD:6f3c1d8f90947408a6587be222fec575a1ca5195
      meta-clang        = HEAD:2b7433611d80f6d0ee1b04156fa91fc73d3c2665
      meta-boot2qt      = HEAD:4078fdfdaf23c4d96c0734563945ca41acf00c93
      meta-boot2qt-distro = HEAD:4078fdfdaf23c4d96c0734563945ca41acf00c93
      meta-mingw        = HEAD:acbba477893ef87388effc4679b7f40ee49fc852
      meta-qt6          = HEAD:f4ef1331f0cc49bd4aa1e1aace6dc7f000b9651e
      

        1. sample_640x360.m2v
          536 kB
          Łukasz Kosiorowski
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            johanseg Jøger Hansegård
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes