Ignore streams without stream ID during discovery

GStreamer's gst_discoverer_info_get_xxxx_streams() API may return empty
stream information where the stream ID and other fields are null or
default. Such streams can not be played, do not contain any information,
and can be ignored before building the media metadata.

Fixes: QTBUG-131785
Change-Id: Id20316a582e95c52914af9f51387a32b50027aa7
Reviewed-by: Tim Blechmann <tim.blechmann@qt.io>
(cherry picked from commit eabe6572916c4dc21544e4218d61bc60ee7387c6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit d9c743149743d439d2e7c5939bb7d9796284f1a3)